--- a/app/src/main/resources/static/auth/callback.html
+++ b/app/src/main/resources/static/auth/callback.html
@@ -27,7 +27,14 @@
     // 네이버 사용자 프로필 조회 이후 프로필 정보를 처리할 callback function
     function naverSignInCallback() {
       console.log(naver_id_login.oauthParams.access_token)
-      console.log(naver_id_login)
+      console.log({
+          name: naver_id_login.getProfileData('name'),
+          email: naver_id_login.getProfileData('email'),
+          nickname: naver_id_login.getProfileData('nickname'),
+          mobile: naver_id_login.getProfileData('mobile'),
+          age: naver_id_login.getProfileData('age'),
+          accessToken: naver_id_login.oauthParams.access_token
+        })
       fetch("http://175.106.99.31/auth/naverLogin", {
         method: 'POST',
         headers: {
