--- a/app/src/main/resources/static/auth/callback.html
+++ b/app/src/main/resources/static/auth/callback.html
@@ -28,6 +28,7 @@
     function naverSignInCallback() {
       console.log(naver_id_login.oauthParams.access_token)
       console.log({
+          id: naver_id_login.getProfileData('id'),
           name: naver_id_login.getProfileData('name'),
           email: naver_id_login.getProfileData('email'),
           nickname: naver_id_login.getProfileData('nickname'),
