--- a/app/src/main/resources/static/register/community-write.html
+++ b/app/src/main/resources/static/register/community-write.html
@@ -36,13 +36,14 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
 
   <div class="d-flex align-items-center justify-content-between">
-    <a href="index.html" class="logo d-flex align-items-center">
-      
+    <a class="logo d-flex align-items-center">
+     <!--  <img src="assets/img/newlogo.png" alt=""> -->
       <span class="d-none d-lg-block">P DC</span>
     </a>
     <i class="bi bi-list toggle-sidebar-btn"></i>
-   <!-- End Logo -->
-   <div class="top-menu">
+  </div>
+  <!-- End Logo -->
+  <div class="top-menu">
     <a href="hospitals-list.html" class="nav-link collapsed"><span>병원</span></a>
 
     <a href="doctors-community-main.html" class="nav-link collapsed"
