--- a/app/src/main/resources/static/register/patients-records.html
+++ b/app/src/main/resources/static/register/patients-records.html
@@ -62,7 +62,7 @@
           <li class="nav-item dropdown pe-3">
             <a
               class="nav-link nav-profile d-flex align-items-center pe-0"
-              href="doctors-profile-auth.html"
+              href="patients-profile-auth.html"
             >
               <div id="pre-userimg"></div>
               <img
