--- a/app/src/main/resources/static/register/QnQ-doc.html
+++ b/app/src/main/resources/static/register/QnQ-doc.html
@@ -242,9 +242,9 @@
         </style>
         <div class="chat-send-cover">
           <div class="input-group mb-3">
-            <input type="text" class="form-control chat-text" placeholder="Recipient's username"
+            <input type="text" class="form-control chat-text" placeholder="문의 사항을 입력해주세요"
               aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button class="btn btn-outline-secondary chat-btn" type="button" id="button-addon2">Button</button>
+            <button class="btn btn-outline-secondary chat-btn" type="button" id="button-addon2">입력</button>
           </div>
         </div>
       </div>
