--- a/app/src/main/resources/static/register/AnA-admin.html
+++ b/app/src/main/resources/static/register/AnA-admin.html
@@ -133,7 +133,7 @@
       </script>
 
     </ul>
-   <img src="register/assets/img/mainlogo.png" style="height:150px; margin-top:400px; margin-left:40px;">
+   <img src="../register/assets/img/mainlogo.png" style="height:150px; margin-top:400px; margin-left:40px;">
   </aside><!-- End Sidebar-->
   <main id="main" class="main">
 
