--- a/app/src/main/resources/static/register/QnQ-doc.html
+++ b/app/src/main/resources/static/register/QnQ-doc.html
@@ -171,6 +171,7 @@
           margin-left: auto;
           margin-right: auto;
           box-sizing: border-box;
+         
         }
 
         .chats {
@@ -194,22 +195,39 @@
         .chat-list li {
           list-style: none;
           width: 100%;
-          min-height: 90px;
+          min-height: 120px;
           margin-bottom: 2%;
         }
 
         .chat-left {}
 
-        .chat-left div {
+         .chat-left div {
+          width: 300px;
           float: left;
-          background-color: rgb(204, 224, 255);
+          background-color: white;
+          border: 3px solid rgb(134, 177, 243);
         }
-
         .chat-right {}
 
         .chat-right div {
+         width: 300px;
           float: right;
-          background-color: rgb(59, 137, 255);
+          background-color: white;
+          border: 3px solid rgb(4, 50, 120);
+        }
+        #q-content{
+          font-weight: bolder;
+        }
+        #q-date{
+          font-size: smaller;
+          margin-left: 170px;
+        }
+        #a-content{
+          font-weight: bolder;
+        }
+        #a-date{
+          font-size: smaller;
+           margin-left: 170px;
         }
 
         .chats li div {
@@ -217,7 +235,7 @@
           max-width: 50%;
           min-height: 90px;
           padding: 5px;
-          border-radius: 5px;
+          border-radius: 10px;
           box-sizing: border-box;
         }
 
@@ -226,20 +244,6 @@
           box-sizing: border-box;
         }
       </style>
-      <div class="chat-cover">
-        <div class="chats scroll">
-          <ul class="chat-list">
-
-          </ul>
-        </div>
-        <style>
-          .chat-send-cover {
-            width: 100%;
-            height: 13%;
-            box-sizing: border-box;
-            border-radius: 10px;
-          }
-        </style>
         <div class="chat-send-cover">
           <div class="input-group mb-3">
             <input type="text" class="form-control chat-text" placeholder="문의 사항을 입력해주세요"
