--- a/app/src/main/resources/static/register/QnQ.html
+++ b/app/src/main/resources/static/register/QnQ.html
@@ -85,7 +85,7 @@
       <li class="nav-heading">My page</li>
 
       <li class="nav-item">
-        <a class="nav-link" href="patients-profile.html">
+        <a class="nav-link collapsed" href="patients-profile.html">
           <i class="bi bi-person"></i>
           <span>내 정보</span>
         </a>
@@ -100,7 +100,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="QnQ.html">
+        <a class="nav-link" href="QnQ.html">
           <i class="bi bi-question-circle"></i>
           <span>문의하기</span>
         </a>
