--- a/app/src/main/resources/static/register/hospitals-input.html
+++ b/app/src/main/resources/static/register/hospitals-input.html
@@ -1,112 +1,108 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>전화 번호 인증</title>
-    <!-- CSS only -->
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>내 병원 등록</title>
+    <meta content="" name="description" />
+    <meta content="" name="keywords" />
+
+    <!-- Favicons -->
+    <link href="assets/img/newlogo.png" rel="icon" />
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.gstatic.com" rel="preconnect" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
     />
 
-    <style>
-      .input-background {
-        width: 100%;
-        height: 50px;
-        background-color: rgb(245, 245, 245);
-        border: 1px solid rgb(245, 245, 245);
-        padding: 10px;
-        box-sizing: border-box;
-        margin-bottom: 10px;
-      }
+    <!-- Vendor CSS Files -->
+    <link
+      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+    <link href="assets/vendor/quill/quill.snow.css" rel="stylesheet" />
+    <link href="assets/vendor/quill/quill.bubble.css" rel="stylesheet" />
+    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
+    <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet" />
 
-      input {
-        border: 0px;
-        background-color: unset;
-        border-bottom: 2px solid rgb(216, 216, 216);
-        width: 100%;
-        height: 100%;
-        color: transparent;
-        text-shadow: 0 0 0 black;
-      }
-
-      input:focus {
-        outline: none;
-        border-bottom: 2px solid rgb(75, 75, 75);
-      }
-
-      .search-input {
-        width: 92%;
-        height: 50px;
-        box-sizing: border-box;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 20px;
-        margin-bottom: 100px;
-      }
-
-      button {
-        width: 100%;
-      }
-
-      h3 {
-        width: 92%;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      body {
-        padding-top: 20px;
-      }
-    </style>
+    <!-- Template Main CSS File -->
+    <link href="assets/css/style.css" rel="stylesheet" />
   </head>
 
   <body>
-    <h3 class="text-center">내 병원 등록</h3>
-    <button type="button" id="0, " class="btn btn-secondary col-sm-2" onclick="setParentText(event)">등록 취소</button>
-    <div style="float: right">
-      <input
-      type="text"
-      id="search-input"
-      class="form-control search-filter"
-      placeholder="검색"
-    />
-    </div>
-    <table id="foo-table" class="table table-hover">
-      <thead>
-        <tr>
-          <!-- table 작업시에 <th><td> 갯수가 서로 일치하지 않으면 정렬 버튼 사라집니다 -->
-          <th scope="col">번호</th>
-          <th scope="col">병원명</th>
-          <th scope="col">주소</th>
-          <th scope="col">전화</th>
-          <!-- <th scope="col">진료시간</th> 굳이시간 받을필요 없음 -->
-          <th scope="col">진료과목</th>
-        </tr>
-      </thead>
-      <tbody id="hospital-list" class="table-group-divider">
-        <tr id="hospital-list-detail">
-          <td id="hospitalNo"></td>
-          <td id="hospitalName"></td>
-          <td id="hospitalAddr"></td>
-          <td id="hospitalTel"></td>
-          <!-- <td id="hospitalTime"></td> 굳이시간 받을필요 없음 -->
-          <td id="hospitalSub"></td>
-        </tr>
-      </tbody>
-    </table>
+    <header
+      id="header"
+      class="header fixed-top d-flex align-items-center justify-content-center"
+    >
+      <div class="logo d-flex align-items-center justify-content-center">
+        <span class="d-none d-lg-block">내 병원 등록</span>
+      </div>
+    </header>
+    <main id="main" class="main">
+      <button
+        type="button"
+        id="0, "
+        class="btn btn-secondary col-sm-2"
+        onclick="setParentText(event)"
+      >
+        등록 취소
+      </button>
+      <div style="float: right">
+        <input
+          type="text"
+          id="search-input"
+          class="form-control search-filter"
+          placeholder="검색"
+        />
+      </div>
+      <table id="foo-table" class="table table-hover">
+        <thead>
+          <tr>
+            <!-- table 작업시에 <th><td> 갯수가 서로 일치하지 않으면 정렬 버튼 사라집니다 -->
+            <th scope="col">번호</th>
+            <th scope="col">병원명</th>
+            <th scope="col">주소</th>
+            <th scope="col">전화</th>
+            <!-- <th scope="col">진료시간</th> 굳이시간 받을필요 없음 -->
+            <th scope="col">진료과목</th>
+          </tr>
+        </thead>
+        <tbody id="hospital-list" class="table-group-divider">
+          <tr id="hospital-list-detail">
+            <td id="hospitalNo"></td>
+            <td id="hospitalName"></td>
+            <td id="hospitalAddr"></td>
+            <td id="hospitalTel"></td>
+            <!-- <td id="hospitalTime"></td> 굳이시간 받을필요 없음 -->
+            <td id="hospitalSub"></td>
+          </tr>
+        </tbody>
+      </table>
+    </main>
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/chart.js/chart.umd.js"></script>
+    <script src="assets/vendor/echarts/echarts.min.js"></script>
+    <script src="assets/vendor/quill/quill.min.js"></script>
+    <!-- <script src="assets/vendor/simple-datatables/simple-datatables.js"></script> -->
+    <script src="assets/vendor/simple-datatables/doctor-datatables.js"></script>
+    <script src="assets/vendor/tinymce/tinymce.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
 
-    <!-- JavaScript Bundle with Popper -->
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
+
     <!-- 사용자가 추가한 스크립트 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
     <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.production.min.js"
@@ -116,11 +112,6 @@
       src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
     ></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
     <script>
       //검색기능
       const tbody = document.querySelector('tbody');
